--- a/config.json
+++ b/config.json
@@ -14,7 +14,8 @@
       "margin_type": "CROSS",
       "quantity_multiplier": 1,
       "mode": "neutral",
-      "spacing_percentage": 2
+      "spacing_percentage": 2,
+      "progressive_grid" : "False"
     },
     "SXPUSDT": {
       "symbol": "SXPUSDT",
@@ -26,6 +27,7 @@
       "quantity_multiplier": 1,
       "mode": "neutral",
       "spacing_percentage": 2
+      "progressive_grid" : "True"
     }
   }
 }
